kubernetes/manifests/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: mygoapp
spec:
  selector:
    matchLabels:
      app: mygoapp
  template:
    metadata:
      labels:
        app: mygoapp
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      terminationGracePeriodSeconds: 60
      enableServiceLinks: false
      volumes:
        - name: mycmvolume
          configMap:
            name: mygoappconfigmapfiles
        - name: mysecretvolume
          secret:
            secretName: mysecretfiles
      # для корректной работы необходимо создать абстракцию Secret, используя команду
      # kubectl create secret generic dockerhub --from-file=.dockerconfigjson=$HOME/.docker/config.json --type=kubernetes.io/dockerconfigjson
      imagePullSecrets:
        - name: dockerhub
      containers:
      - name: mygoapp
        image: yourname/yourrepo:1.0.0
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 4000
        livenessProbe:
          tcpSocket:
            port: 4000
        startupProbe:
          tcpSocket:
            port: 4000
        # lifecycle:
        #   preStop:
        #     exec:
        #       command:
        #         - nginx -s quit
        ports:
          - containerPort: 4000
        volumeMounts:
          - mountPath: /app/app.properties
            name: mycmvolume
            subPath: myapp.properties
          - mountPath: /media/mynewsecretfile
            name: mysecretvolume
            subPath: mysecretfile
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: yes
          capabilities:
            drop:
              - ALL
        resources:
          limits:
            cpu: 10m
            memory: 15Mi
