kubernetes/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mynginxpod
spec:
  containers:
  - name: nginx
    image: nginx:stable
    resources:
      limits:
        cpu: 50m
        memory: 50Mi
    ports:
      - containerPort: 80
  - name: postgres
    image: postgres:alpine
    resources:
      limits:
        cpu: 50m
        memory: 50Mi
    ports:
      - containerPort: 5432

---
apiVersion: v1
kind: Pod
metadata:
  name: mynewnginxpod
spec:
  priorityClassName: mypriorityclass
  containers:
  - name: mynewprocess
    image: nginx:alpine
    ports:
      - containerPort: 80
