kubernetes/manifests/app.yaml
---
# Source: application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-devops-application-be
  labels:
    helm.sh/chart: application-1.0.0
    app.kubernetes.io/name: devops-application-be
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: devops-application-be
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-devops-application-be
  labels:
    helm.sh/chart: application-1.0.0
    app.kubernetes.io/name: devops-application-be
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: Rexreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-application-be
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      annotations:
        checksum/config: b27d779418ae4c931776754574e54b5c40f8195d9dff4aede7c86b9dfad9968a
        checksum/secret: 275726bcd474c24992477e6f76f3556d228060e3eb3e236ced46d21246b534e3
      labels:
        app.kubernetes.io/name: devops-application-be
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      imagePullSecrets:
        - name: artifactory
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: RELEASE-NAME-devops-application-be
          command:
            - "python3"
          args:
            - "app.py"
          lifecycle:
            preStop:
              exec:
                command:
                  - "python3"
                  - "graceful_shutdown.py"
          workingDir: /app
          securityContext:
            capabilities:
              drop:
              - ALL
          image: "application_backend/master:1.10.27"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 250Mi
            limits:
              cpu: 10m
              memory: 250Mi
          volumeMounts:
            - name: "RELEASE-NAME-devops-application-be-config"
              mountPath: /app/config.yaml
              subPath: config.yaml
      volumes:
        - name: "RELEASE-NAME-devops-application-be-config"
          configMap:
            name: "RELEASE-NAME-devops-application-be-config"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: worker-group
                operator: In
                values:
                - applications
---
# Source: application/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: RELEASE-NAME-devops-application-be
  labels:
    helm.sh/chart: application-1.0.0
    app.kubernetes.io/name: devops-application-be
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "application.com"
      secretName: https-certs
  rules:
    - host: "application.com"
      http:
        paths:
          - path: /api
            backend:
              serviceName: RELEASE-NAME-devops-application-be
              servicePort: 80
          - path: /graphql
            backend:
              serviceName: RELEASE-NAME-devops-application-be
              servicePort: 80
---
# Source: application/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "RELEASE-NAME-devops-application-be-test-connection"
  labels:
    helm.sh/chart: application-1.0.0
    app.kubernetes.io/name: devops-application-be
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['RELEASE-NAME-devops-application-be']
      resources:
        requests:
          cpu: 10m
          memory: 250Mi
        limits:
          cpu: 10m
          memory: 250Mi
  restartPolicy: Never
