kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myappingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: <mydomain>
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mygoappservice
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: aliservice
            port:
              number: 80
  tls:
    - secretName: myssl-cert
      hosts:
        - <mydomain>
