kubernetes/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mygoappnetworkpolicy
spec:
  podSelector:
    matchLabels:
      app: mygoapp
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ali

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alinetworkpolicy
spec:
  podSelector:
    matchLabels:
      app: ali
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: UDP
          port: 53
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: goappdeploy
